# Jarvis

./: .gitignore  README.md  pyproject.toml
jarvis/: __init__.py  __main__.py  cli.py  coordinator.py  daemon.py  dashboard.html  orchestrator.py  protocol.py  session.py  web.py
